@@ -1,5 +1,4 @@
 
-
               readwholedir`rw_files+{ptr}
               libc.so.6`vfprintf+{ptr}
               libc.so.6`vsprintf+{ptr}
@@ -10,13 +9,4 @@
               libc.so.6`vsprintf+{ptr}
               libc.so.6`_IO_file_doallocate+{ptr}
 
-              readwholedir`rw_files+{ptr}
-              libc.so.6`vfprintf+{ptr}
-              libc.so.6`vsprintf+{ptr}
-              libc.so.6`_IO_file_doallocate+{ptr}
-
-              readwholedir`rw_files+{ptr}
-              libc.so.6`vfprintf+{ptr}
-              libc.so.6`vsprintf+{ptr}
-              libc.so.6`_IO_file_doallocate+{ptr}
 
